# MacSpace

./: .gitignore  pyproject.toml
macspace/: app.py
macspace.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
