[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macspace"
version = "0.1.0"
description = "A tiny workspace manager CLI for macOS"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["mac", "workspace", "app"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS"
]

[project.scripts]
macspace = "macspace.app:main"
